--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,9 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>ODIN RECIPES</h1>
-    <ul>
-      <li><a href="recipes/lasagna.html">Lasagna recipe</a></li>
-    </ul>
+    <h1>Lasagna Recipe</h1>
+
   </body>
 </html>
